# Django-React-Crud-and-auth

./: .dockerignore  .gitignore  RECIPE_GENERATOR_SETUP.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  setup_env_files.py
django_react/: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
django_react/api/: admin.py  models.py  serializer.py  views.py
django_react/api/migrations/: 0001_initial.py  0002_productmodel_created_at.py  0003_categorymodel_productmodel_category.py  0004_remove_productmodel_category.py  0005_productmodel_category.py
django_react/django_react/: settings.py  urls.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/Components/: AddProducut.jsx  CategoryViseProduct.jsx  Header.css  Header.jsx  Home.css  Home.jsx  Logout.jsx  RecipeGenerator.css  RecipeGenerator.jsx  RecipeMain.css  RecipeMain.jsx  Register.jsx  UpdateProduct.jsx  login.jsx
tailwind_react/: package-lock.json  package.json
tailwind_react/src/: App.jsx
